--- a/dso/branches/asm_32_upgrade/code/base/pom.xml
+++ b/dso/branches/asm_32_upgrade/code/base/pom.xml
@@ -194,7 +194,11 @@
         <artifactId>guice</artifactId>
         <version>1.0</version>
       </dependency>
-
+      <dependency>
+	<groupId>asm</groupId>
+	<artifactId>asm-all</artifactId>
+	<version>3.2</version>
+      </dependency>
       <!-- dependencies for tests -->
       <dependency>
         <groupId>junit</groupId>
