--- a/dso/branches/asm_32_upgrade/code/base/common-api/.classpath
+++ b/dso/branches/asm_32_upgrade/code/base/common-api/.classpath
@@ -9,6 +9,7 @@
 	<classpathentry exported="true" kind="lib" path="/dependencies/lib/ant-1.7.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="/dependencies/lib/ant-junit-1.7.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="/dependencies/lib/ant-launcher-1.7.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="/dependencies/lib/asm-all-3.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="/dependencies/lib/commons-cli-1.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="/dependencies/lib/commons-httpclient-3.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="/dependencies/lib/commons-io-1.2.jar"/>
