--- a/dso/branches/asm_32_upgrade/code/base/modules.def.yml
+++ b/dso/branches/asm_32_upgrade/code/base/modules.def.yml
@@ -17,11 +17,11 @@ modules:
   - thirdparty-api:
       options:
         jdk: J2SE-1.5
+      dependencies:
+        - common-api
   - thirdparty:
       options:
         jdk: J2SE-1.5
-      dependencies:
-        - thirdparty-api
   - common-api:
       options:
         jdk: J2SE-1.5
@@ -82,7 +82,6 @@ modules:
         - license-common
         - dso-l1-api
         - dso-cluster-api
-        - thirdparty-api
         - dso-statistics-api
         - sigarstats
   - dso-common-jdk16:
@@ -128,7 +127,6 @@ modules:
         - dso-l1-api
         - dso-statistics-api
         - management-api
-        - thirdparty-api
   - deploy-api:
       options:
         jdk: J2SE-1.5
@@ -139,7 +137,6 @@ modules:
         - dso-l1-api
         - dso-l2-common
         - dso-statistics-api
-        - thirdparty-api
         - management-api
   - modules-base:
       options:
@@ -186,7 +183,6 @@ modules:
         - license-common
         - dso-l1-api
         - modules-base
-        - thirdparty-api
   - sigarstats:
       options:
         jdk: J2SE-1.5
@@ -237,7 +233,6 @@ modules:
         - license-common
         - dso-common
         - dso-l1-api
-        - thirdparty-api
   - dso-l2:
       options:
         jdk: J2SE-1.5
@@ -255,7 +250,6 @@ modules:
         - management
         - management-api
         - thirdparty
-        - thirdparty-api
   - deploy:
       options:
         jdk: J2SE-1.5
@@ -277,7 +271,6 @@ modules:
         - modules-base
         - sigarstats
         - thirdparty
-        - thirdparty-api
   - simulator:
       options:
         jdk: J2SE-1.5
@@ -378,7 +371,6 @@ modules:
         - management-api
         - simulator
         - thirdparty
-        - thirdparty-api
   - dso-statistics-tests:
       options:
         jdk: J2SE-1.5
@@ -402,7 +394,6 @@ modules:
         - management-api
         - simulator
         - thirdparty
-        - thirdparty-api
   - dso-system-tests:
       options:
         jdk: J2SE-1.5
@@ -452,7 +443,6 @@ modules:
         - management-api
         - simulator
         - thirdparty
-        - thirdparty-api
   - dso-crash-tests:
       options:
         jdk: J2SE-1.5
@@ -480,7 +470,6 @@ modules:
         - simulator
         - sigarstats
         - thirdparty
-        - thirdparty-api
   - clustered-surefire-2.3:
       options:
         jdk: J2SE-1.5
@@ -491,7 +480,6 @@ modules:
         - license-common
         - dso-l1-api
         - modules-base
-        - thirdparty-api
   - dso-container-tests:
       options:
         jdk: J2SE-1.5
@@ -517,7 +505,6 @@ modules:
         - sigarstats
         - simulator
         - thirdparty
-        - thirdparty-api
         - tim-get-tool
   - dso-spring-tests:
       options:
@@ -544,7 +531,6 @@ modules:
         - sigarstats
         - simulator
         - thirdparty
-        - thirdparty-api
         - tim-get-tool
   - eclipsegen:
       options:
