upgrade to ASM 3.2

--- a/dso/trunk/code/base/thirdparty-api/src/com/tc/asm/optimizer/shrink-signatures.properties
+++ b/dso/trunk/code/base/thirdparty-api/src/com/tc/asm/optimizer/shrink-signatures.properties
@@ -1,13 +1,13 @@
 # class mappings
 
-org/objectweb/asm/signature/SignatureReader/remove=true
-org/objectweb/asm/signature/SignatureVisitor/remove=true
-org/objectweb/asm/signature/SignatureWriter/remove=true
+com/tc/asm/signature/SignatureReader/remove=true
+com/tc/asm/signature/SignatureVisitor/remove=true
+com/tc/asm/signature/SignatureWriter/remove=true
 
 # field mappings
 
-org/objectweb/asm/ClassWriter.signature=-
+com/tc/asm/ClassWriter.signature=-
 
-org/objectweb/asm/FieldWriter.signature=-
+com/tc/asm/FieldWriter.signature=-
 
-org/objectweb/asm/MethodWriter.signature=-
+com/tc/asm/MethodWriter.signature=-
