--- a/dso/trunk/code/base/thirdparty-api/src/com/tc/asm/optimizer/shrink-writer.properties
+++ b/dso/trunk/code/base/thirdparty-api/src/com/tc/asm/optimizer/shrink-writer.properties
@@ -1,38 +1,38 @@
 # class mappings
 
-org/objectweb/asm/AnnotationWriter/remove=true
-org/objectweb/asm/ByteVector/remove=true
-org/objectweb/asm/ClassAdapter/remove=true
-org/objectweb/asm/ClassWriter/remove=true
-org/objectweb/asm/Edge/remove=true
-org/objectweb/asm/FieldWriter/remove=true
-org/objectweb/asm/Frame/remove=true
-org/objectweb/asm/Handler/remove=true
-org/objectweb/asm/Item/remove=true
-org/objectweb/asm/MethodAdapter/remove=true
-org/objectweb/asm/MethodWriter/remove=true
+com/tc/asm/AnnotationWriter/remove=true
+com/tc/asm/ByteVector/remove=true
+com/tc/asm/ClassAdapter/remove=true
+com/tc/asm/ClassWriter/remove=true
+com/tc/asm/Edge/remove=true
+com/tc/asm/FieldWriter/remove=true
+com/tc/asm/Frame/remove=true
+com/tc/asm/Handler/remove=true
+com/tc/asm/Item/remove=true
+com/tc/asm/MethodAdapter/remove=true
+com/tc/asm/MethodWriter/remove=true
 
 # field mappings
 
-org/objectweb/asm/Label.position=-
-org/objectweb/asm/Label.referenceCount=-
-org/objectweb/asm/Label.srcAndRefPositions=-
-org/objectweb/asm/Label.inputStackTop=-
-org/objectweb/asm/Label.outputStackMax=-
-org/objectweb/asm/Label.frame=-
-org/objectweb/asm/Label.successor=-
-org/objectweb/asm/Label.successors=-
-org/objectweb/asm/Label.next=-
+com/tc/asm/Label.position=-
+com/tc/asm/Label.referenceCount=-
+com/tc/asm/Label.srcAndRefPositions=-
+com/tc/asm/Label.inputStackTop=-
+com/tc/asm/Label.outputStackMax=-
+com/tc/asm/Label.frame=-
+com/tc/asm/Label.successor=-
+com/tc/asm/Label.successors=-
+com/tc/asm/Label.next=-
 
 # method mappings
 
-org/objectweb/asm/ClassReader.copyPool(Lorg/objectweb/asm/ClassWriter;)V=-
+com/tc/asm/ClassReader.copyPool(Lcom/tc/asm/ClassWriter;)V=-
 
-org/objectweb/asm/Label.addReference(II)V=-
-org/objectweb/asm/Label.put(Lorg/objectweb/asm/MethodWriter;Lorg/objectweb/asm/ByteVector;IZ)V=-
-org/objectweb/asm/Label.resolve(Lorg/objectweb/asm/MethodWriter;I[B)Z=-
-org/objectweb/asm/Label.getFirst()Lorg/objectweb/asm/Label;=-
-org/objectweb/asm/Label.inSubroutine(J)Z=-
-org/objectweb/asm/Label.inSameSubroutine(Lorg/objectweb/asm/Label;)Z=-
-org/objectweb/asm/Label.addToSubroutine(JI)V=-
-org/objectweb/asm/Label.visitSubroutine(Lorg/objectweb/asm/Label;JI)V=-
+com/tc/asm/Label.addReference(II)V=-
+com/tc/asm/Label.put(Lcom/tc/asm/MethodWriter;Lcom/tc/asm/ByteVector;IZ)V=-
+com/tc/asm/Label.resolve(Lcom/tc/asm/MethodWriter;I[B)Z=-
+com/tc/asm/Label.getFirst()Lcom/tc/asm/Label;=-
+com/tc/asm/Label.inSubroutine(J)Z=-
+com/tc/asm/Label.inSameSubroutine(Lcom/tc/asm/Label;)Z=-
+com/tc/asm/Label.addToSubroutine(JI)V=-
+com/tc/asm/Label.visitSubroutine(Lcom/tc/asm/Label;JI)V=-
