--- a/dso/trunk/code/base/thirdparty-api/src/com/tc/asm/optimizer/shrink-annotations.properties
+++ b/dso/trunk/code/base/thirdparty-api/src/com/tc/asm/optimizer/shrink-annotations.properties
@@ -1,23 +1,23 @@
 # class mappings
 
-org/objectweb/asm/AnnotationWriter/remove=true
+com/tc/asm/AnnotationWriter/remove=true
 
 # field mappings
 
-org/objectweb/asm/ClassWriter.anns=-
-org/objectweb/asm/ClassWriter.ianns=-
+com/tc/asm/ClassWriter.anns=-
+com/tc/asm/ClassWriter.ianns=-
 
-org/objectweb/asm/FieldWriter.anns=-
-org/objectweb/asm/FieldWriter.ianns=-
+com/tc/asm/FieldWriter.anns=-
+com/tc/asm/FieldWriter.ianns=-
 
-org/objectweb/asm/MethodWriter.annd=-
-org/objectweb/asm/MethodWriter.anns=-
-org/objectweb/asm/MethodWriter.ianns=-
-org/objectweb/asm/MethodWriter.panns=-
-org/objectweb/asm/MethodWriter.ipanns=-
+com/tc/asm/MethodWriter.annd=-
+com/tc/asm/MethodWriter.anns=-
+com/tc/asm/MethodWriter.ianns=-
+com/tc/asm/MethodWriter.panns=-
+com/tc/asm/MethodWriter.ipanns=-
 
 # method mappings
 
-org/objectweb/asm/ClassReader.readAnnotationValue(I[CLjava/lang/String;Lorg/objectweb/asm/AnnotationVisitor;)I=-
-org/objectweb/asm/ClassReader.readAnnotationValues(I[CZLorg/objectweb/asm/AnnotationVisitor;)I=-
-org/objectweb/asm/ClassReader.readParameterAnnotations(I[CZLorg/objectweb/asm/MethodVisitor;)V=-
+com/tc/asm/ClassReader.readAnnotationValue(I[CLjava/lang/String;Lcom/tc/asm/AnnotationVisitor;)I=-
+com/tc/asm/ClassReader.readAnnotationValues(I[CZLcom/tc/asm/AnnotationVisitor;)I=-
+com/tc/asm/ClassReader.readParameterAnnotations(I[CZLcom/tc/asm/MethodVisitor;)V=-
