CDV-1407 : fast getters for final fields

--- a/dso/trunk/code/base/common/src.resources/com/tc/properties/tc.properties
+++ b/dso/trunk/code/base/common/src.resources/com/tc/properties/tc.properties
@@ -750,3 +750,8 @@ stats.printer.intervalInMillis = 5000
 #productkey.url=
 #productkey.path=
 
+###########################################################################################
+# Section :  Instrumentation Settings
+# l1.instrumentation.finalField.fastRead - Enable/disable `dirty' reading of final fields
+###########################################################################################
+instrumentation.finalField.fastRead = true
