Change semantics of this flag (FORGE-557)

--- a/dso/trunk/code/base/common/src.resources/com/tc/properties/tc.properties
+++ b/dso/trunk/code/base/common/src.resources/com/tc/properties/tc.properties
@@ -110,7 +110,7 @@ l2.transactionmanager.passive.throttle.maxSleepSeconds= 5
 # dgc.young.frequencyInMillis - The time in millis between each young gen collection.
 #                               (default : 1 min, not advisable to run more frequently)
 # dgc.faulting.optimization      - This property will not fault in objects that has no references during DGC mark stage
-#                                   0 - disable faulting optimization 
+#                                   0 - disable faulting optimization
 #                                   1 - enabled with standard implementation (continous oids)
 #                                   2 - enabled with compressed implementation (spare oids)
 # data.backup.throttle.timeInMillis - time to sleep between copying of each file from the db
@@ -498,7 +498,7 @@ tc.management.test.mbeans.enabled = false
 #    serverid            : The server identifier to place in the session ID
 #    delimiter           : The delimiter that separates the server ID from the session ID
 #    cookie.domain       : Domain value for session cookie
-#    cookie.secure       : Enable / disable the secure flag in the session cookie
+#    cookie.secure       : Force the secure flag in the session cookie (if false then cookie will be set secure for secure(https) requests)
 #    cookie.maxage.seconds : The maximum lifetime of the session cookie
 #    cookie.name         : Name of the session cookie
 #    cookie.enabled      : Enable / disable the use of cookies for session tracking
@@ -561,9 +561,9 @@ memory.monitor.forcebasic = false
 
 
 ###########################################################################################
-# NOTE: All Ehcache properties below refer to the legacy tim-ehcache-1.3 and 
-# tim-ehcache-1.4 Terracotta Integration Modules.  These properties have no effect on the 
-# Ehache-Terracotta integration that was added in Ehcache 1.7.  
+# NOTE: All Ehcache properties below refer to the legacy tim-ehcache-1.3 and
+# tim-ehcache-1.4 Terracotta Integration Modules.  These properties have no effect on the
+# Ehache-Terracotta integration that was added in Ehcache 1.7.
 ###########################################################################################
 #  Section                         : Ehcache
 #  clusterAllCacheManagers         : Whether all CacheManager instances are auto-clustered by default,
