updating to new integrations page

--- a/reflector/reflector.properties
+++ b/reflector/reflector.properties
@@ -2,8 +2,8 @@
 
 # This is the properties file for the reflector
 ### Start default
-default.IntegrationsLucene=http://www.terracotta.org/web/display/orgsite/Integration+Guides
-default.IntegrationsWicket=http://www.terracotta.org/web/display/orgsite/Integration+Guides
+default.IntegrationsLucene=http://www.terracotta.org/web/display/docs/Integrating+Terracotta+DSO
+default.IntegrationsWicket=http://www.terracotta.org/web/display/docs/Integrating+Terracotta+DSO
 default.update.properties=http://svn.terracotta.org/svn/tc/update-checker/update-list.properties
 ehcache.default.update.properties=http://svn.terracotta.org/svn/tc/update-checker/ehcache-update-list.properties
 ehcache.monitor.update.properties=http://svn.terracotta.org/svn/tc/update-checker/ehcache-monitor-update-list.properties
@@ -28,12 +28,12 @@ ehcache.monitor.update.properties=http://svn.terracotta.org/svn/tc/update-checke
 3.2.ConceptAndArchGuide=http://www.terracotta.org/web/display/docs/Concept+and+Architecture+Guide
 3.2.ConfigGuideAndRef=http://www.terracotta.org/web/display/docs/Configuration+Guide+and+Reference
 3.2.PluginReferenceGuide=http://www.terracotta.org/web/display/docs/DSO+Eclipse+Plugin+Guide
-3.2.ConfigModules=http://terracotta.org/web/display/orgsite/Integration+Guides
-3.2.ApacheCommonsCollectionsConfigModule=http://www.terracotta.org/web/display/orgsite/Integrations+Encyclopedia#IntegrationsEncyclopedia-CommonsCollections
-3.2.ApacheStrutsConfigModule=http://www.terracotta.org/web/display/orgsite/Integrations+Encyclopedia#IntegrationsEncyclopedia-ApacheStruts
-3.2.CglibConfigModule=http://www.terracotta.org/web/display/orgsite/Integrations+Encyclopedia#IntegrationsEncyclopedia-CGLIB
-3.2.iBatisConfigModule=http://www.terracotta.org/web/display/orgsite/Integrations+Encyclopedia#IntegrationsEncyclopedia-iBatis
-3.2.LuceneConfigModule=http://www.terracotta.org/web/display/orgsite/Integrations+Encyclopedia#IntegrationsEncyclopedia-Lucene
+3.2.ConfigModules=http://terracotta.org/web/display/docs/Integrating+Terracotta+DSO
+3.2.ApacheCommonsCollectionsConfigModule=http://www.terracotta.org/web/display/docs/Integrating+Terracotta+DSO
+3.2.ApacheStrutsConfigModule=http://www.terracotta.org/web/display/docs/Integrating+Terracotta+DSO
+3.2.CglibConfigModule=http://www.terracotta.org/web/display/docs/Integrating+Terracotta+DSO
+3.2.iBatisConfigModule=http://www.terracotta.org/web/display/docs/Integrating+Terracotta+DSO
+3.2.LuceneConfigModule=http://www.terracotta.org/web/display/docs/Integrating+Terracotta+DSO
 
 ### Start 3.1 --Note: KitID 3.1 is referenced in 3.1, it will point to the current docs
 3.1.GettingStarted=http://www.terracotta.org/web/display/orgsite/Getting+Started
@@ -62,12 +62,12 @@ ehcache.monitor.update.properties=http://svn.terracotta.org/svn/tc/update-checke
 3.1.ConceptAndArchGuide=http://www.terracotta.org/web/display/docs/Concept+and+Architecture+Guide
 3.1.ConfigGuideAndRef=http://www.terracotta.org/web/display/docs/Configuration+Guide+and+Reference
 3.1.PluginReferenceGuide=http://www.terracotta.org/web/display/docs/DSO+Eclipse+Plugin+Guide
-3.1.ConfigModules=http://terracotta.org/web/display/orgsite/Integration+Guides
-3.1.ApacheCommonsCollectionsConfigModule=http://www.terracotta.org/web/display/orgsite/Integrations+Encyclopedia#IntegrationsEncyclopedia-CommonsCollections
-3.1.ApacheStrutsConfigModule=http://www.terracotta.org/web/display/orgsite/Integrations+Encyclopedia#IntegrationsEncyclopedia-ApacheStruts
-3.1.CglibConfigModule=http://www.terracotta.org/web/display/orgsite/Integrations+Encyclopedia#IntegrationsEncyclopedia-CGLIB
-3.1.iBatisConfigModule=http://www.terracotta.org/web/display/orgsite/Integrations+Encyclopedia#IntegrationsEncyclopedia-iBatis
-3.1.LuceneConfigModule=http://www.terracotta.org/web/display/orgsite/Integrations+Encyclopedia#IntegrationsEncyclopedia-Lucene
+3.1.ConfigModules=http://terracotta.org/web/display/docs/Integrating+Terracotta+DSO
+3.1.ApacheCommonsCollectionsConfigModule=http://www.terracotta.org/web/display/docs/Integrating+Terracotta+DSO
+3.1.ApacheStrutsConfigModule=http://www.terracotta.org/web/display/docs/Integrating+Terracotta+DSO
+3.1.CglibConfigModule=http://www.terracotta.org/web/display/docs/Integrating+Terracotta+DSO
+3.1.iBatisConfigModule=http://www.terracotta.org/web/display/docs/Integrating+Terracotta+DSO
+3.1.LuceneConfigModule=http://www.terracotta.org/web/display/docs/Integrating+Terracotta+DSO
 
 ### Start 3.0 --Note: KitID 3.0 is also referenced in trunk, it will point to the current docs
 3.0.Forums=http://forums.terracotta.org/forums/forums/list.page
