new entry for quartz phone home

--- a/reflector/reflector.properties
+++ b/reflector/reflector.properties
@@ -7,6 +7,7 @@ default.IntegrationsWicket=http://www.terracotta.org/web/display/docs/Integratin
 default.update.properties=http://svn.terracotta.org/svn/tc/update-checker/update-list.properties
 ehcache.default.update.properties=http://svn.terracotta.org/svn/tc/update-checker/ehcache-update-list.properties
 ehcache.monitor.update.properties=http://svn.terracotta.org/svn/tc/update-checker/ehcache-monitor-update-list.properties
+quartz.update.properties=http://svn.terracotta.org/svn/tc/update-checker/quartz-update-list.properties
 ### End default
 
 
