DEV-3502: add quartz

--- a/dso/branches/3.2/code/base/buildconfig/distribution/dso-enterprise.def.yml
+++ b/dso/branches/3.2/code/base/buildconfig/distribution/dso-enterprise.def.yml
@@ -132,6 +132,8 @@ postscripts:
         - tim-jetty-6.1
         - terracotta-hibernate-cache-ee
         - ehcache-terracotta-ee
+        - quartz-terracotta-ee
+        
   - extract-hibernate-cache-reference:
       args:
         - dest: hibernate
