--- a/dso/branches/3.2/code/base/buildconfig/distribution/dso-opensource.def.yml
+++ b/dso/branches/3.2/code/base/buildconfig/distribution/dso-opensource.def.yml
@@ -149,6 +149,7 @@ postscripts:
         - tim-jetty-6.1
         - terracotta-hibernate-cache
         - ehcache-terracotta
+        - quartz-terracotta
         
   - extract-hibernate-cache-reference:
       args:
