added Register mapping in 3.2

--- a/reflector/reflector.properties
+++ b/reflector/reflector.properties
@@ -12,6 +12,7 @@ quartz.update.properties=http://svn.terracotta.org/svn/tc/update-checker/quartz-
 
 
 ### Start 3.2 --Note: KitID 3.2 is referenced in trunk, it will point to the current docs
+3.2.Register=http://www.terracotta.org/account/
 3.2.Documentation=http://www.terracotta.org/documentation/
 3.2.Forums=http://forums.terracotta.org/forums/forums/list.page
 3.2.SupportServices=http://www.terracotta.org/web/display/enterprise/Support
