--- a/dso/branches/3.2/code/base/buildconfig/distribution/external-resources.yml
+++ b/dso/branches/3.2/code/base/buildconfig/distribution/external-resources.yml
@@ -65,5 +65,5 @@ artifacts:
     name: quartz-1.7.0.tar.gz
     destination: ./
     explode: true
-    url: http://kong/output/release-kits/quartz/quartz-1.7.0.zip
+    url: http://kong/output/release-kits/quartz/quartz-1.7.0.tar.gz
 # end QUARTZ
