--- a/reflector/reflector.properties
+++ b/reflector/reflector.properties
@@ -12,6 +12,7 @@ quartz.update.properties=http://svn.terracotta.org/svn/tc/update-checker/quartz-
 
 
 ### Start 3.2 --Note: KitID 3.2 is referenced in trunk, it will point to the current docs
+3.2.AboutConfigurationFiles=http://www.terracotta.org/documentation/ga/product-documentation
 3.2.ProductDocumentation=http://www.terracotta.org/documentation/ga/product-documentation
 3.2.ToolsOverview=http://www.terracotta.org/documentation/ga/product-documentation
 3.2.GettingStarted=http://www.terracotta.org
