updated broken link

--- a/reflector/reflector.properties
+++ b/reflector/reflector.properties
@@ -285,7 +285,7 @@ wbsp.upcoming_training=http://www.terracotta.org/confluence/display/orgsite/Upco
 # ehcache and hibernate integrations
 0706nl.integrations=http://www.terracotta.org/confluence/display/integrations/Home
 # jboss cache
-0706nl.jbc=http://www.terracotta.org/web/display/orgsite/TCWP+Terracotta+TreeCache
+0706nl.jbc=http://www.terracotta.org/products
 # news and buzz
 0706nl.news=http://www.terracotta.org/confluence/display/orgsite/Terracotta+News
 ### End June Newsletter
