--- a/update-checker/ehcache-update-list.properties
+++ b/update-checker/ehcache-update-list.properties
@@ -1,15 +1,22 @@
 ## Top level keys
 # general.notice = This notice should rarely, if ever, be used as everyone running ehcache will see it
 
+## 1.7.2 -- latest release
+1.7.2.updates			=
+1.7.2.notices			= 1.7.2 is the latest GA release
+1.7.2.release-notes		= http://ehcache.org/news.html
+
+1.7.2-SNAPSHOT.updates  = 1.7.2
+
 ## 1.7.1 -- latest release
-1.7.1.updates			= 
-1.7.1.notices			= 1.7.1 is the latest GA release
+1.7.1.updates			=  1.7.2
+1.7.1.notices			= We recommend upgrading to 1.7.1, our latest GA release
 1.7.1.release-notes	= http://ehcache.org/news.html
 
 1.7.1-SNAPSHOT.updates = 1.7.1
 
 ## 1.7.0 
-1.7.0.updates			= 
+1.7.0.updates			= 1.7.2
 1.7.0.notices			= We recommend upgrading to 1.7.1, our latest GA release
 1.7.0.release-notes	= http://ehcache.org/news.html
 
