put terracotta-session to 'session' folder

--- a/dso/branches/3.2/code/base/buildconfig/distribution/dso-enterprise.def.yml
+++ b/dso/branches/3.2/code/base/buildconfig/distribution/dso-enterprise.def.yml
@@ -132,6 +132,7 @@ postscripts:
         - tim-jetty-6.1
         - ehcache-terracotta-ee
         - quartz-terracotta-ee
+        - terracotta-session-ee
            
   - inject-forge-tims:
       args:
