--- a/dso/branches/3.2/code/base/buildconfig/distribution/dso-opensource.def.yml
+++ b/dso/branches/3.2/code/base/buildconfig/distribution/dso-opensource.def.yml
@@ -149,6 +149,7 @@ postscripts:
         - tim-jetty-6.1
         - ehcache-terracotta
         - quartz-terracotta
+        - terracotta-session
         
   - inject-forge-tims:
       args:
