--- a/dso/branches/bulkload/code/base/buildconfig/distribution/dso-opensource.def.yml
+++ b/dso/branches/bulkload/code/base/buildconfig/distribution/dso-opensource.def.yml
@@ -147,16 +147,10 @@ postscripts:
       args:
         - tim-apache-struts-1.1
         - tim-jetty-6.1
-        - terracotta-hibernate-cache
         - ehcache-terracotta
         - quartz-terracotta
+        - terracotta-session
         
-  - extract-hibernate-cache-reference:
-      args:
-        - dest: hibernate
-          agent-pattern: terracotta-hibernate-agent
-          provider-pattern: tim-hibernate-cache-provider
-          reference-file: org/terracotta/hibernate/reference-config.xml
   - inject-forge-tims:
       args:
         - tims: 
