--- a/dso/branches/bulkload/code/base/management-api/src.resources/com/tc/management/management.properties
+++ b/dso/branches/bulkload/code/base/management-api/src.resources/com/tc/management/management.properties
@@ -6,10 +6,11 @@
 
 
 # MBean Domains
-domain.public   = org.terracotta
-domain.internal = org.terracotta.internal
-domain.tim      = org.terracotta.tim
-domain.ehcache  = net.sf.ehcache
+domain.public             = org.terracotta
+domain.internal           = org.terracotta.internal
+domain.tim                = org.terracotta.tim
+domain.ehcache            = net.sf.ehcache
+domain.ehcache.hibernate  = net.sf.ehcache.hibernate
 
 # System property that DSO client VMs can set to override their hostname, which defaults to host:port
 system-property.node-name = tc.node-name
