--- a/dso/branches/3.2/code/base/buildconfig/distribution/external-resources.yml
+++ b/dso/branches/3.2/code/base/buildconfig/distribution/external-resources.yml
@@ -63,7 +63,8 @@ artifacts:
 # begin QUARTZ
   - maven_artifact: false
     name: quartz-1.7.0.tar.gz
-    destination: ./
+    destination: quartz 
     explode: true
+    remove_root_folder: true
     url: http://download.terracotta.org/nightly/quartz/quartz-1.7.0.tar.gz
 # end QUARTZ
