DEV-3662: Move samples director to platform/samples

--- a/dso/trunk/code/base/buildconfig/distribution/dso-enterprise.def.yml
+++ b/dso/trunk/code/base/buildconfig/distribution/dso-enterprise.def.yml
@@ -4,7 +4,7 @@ kit_name_pattern: terracotta-version-ee
 root_directory: terracotta-version-ee
 bundled_demos:
   - pojo:
-      install_directory: samples/pojo
+      install_directory: platform/samples/pojo
       manifest:
         - chatter
         - coordination
@@ -151,7 +151,7 @@ postscripts:
         - schema
   - make-srcdocs:
       args:
-        - samples/pojo
+        - platform/samples/pojo
         - sessions/samples         
   - maven-deploy:
       args:
