--- a/dso/trunk/code/demos/pojo/chatter/build.xml
+++ b/dso/trunk/code/demos/pojo/chatter/build.xml
@@ -11,7 +11,7 @@ All content copyright Terracotta, Inc., unless otherwise indicated. All rights r
   <property name="images.dir" location="${src.dir}/images" />
   <property name="build.dir" location="classes" />
   <property name="build.images.dir" location="${build.dir}/images" />
-  <property name="api.jar" value="../../../lib/terracotta-api-@api.version@.jar"/>
+  <property name="api.jar" value="../../../../lib/terracotta-api-@api.version@.jar"/>
 
   <target name="init">
     <mkdir dir="${build.dir}" />
