--- a/dso/trunk/code/base/tim-get-tool/src.resources/tim-get.properties
+++ b/dso/trunk/code/base/tim-get-tool/src.resources/tim-get.properties
@@ -44,4 +44,4 @@ org.terracotta.modules.tool.relativeUrlBase = http://www.terracotta.org/download
 org.terracotta.modules.tool.dataCacheExpirationInSeconds = 86400
 
 # The full pathname used as TC's TIM repository 
-org.terracotta.modules.tool.modulesDir = ${tc.install-root}/modules
+org.terracotta.modules.tool.modulesDir = ${tc.install-root}/platform/modules
