updated with Getting Started pointing to whats new in 2010 page

--- a/reflector/reflector.properties
+++ b/reflector/reflector.properties
@@ -18,7 +18,7 @@ quartz.update.properties=http://svn.terracotta.org/svn/tc/update-checker/quartz-
 3.2.AboutConfigurationFiles=http://www.terracotta.org/documentation/ga/product-documentation
 3.2.ProductDocumentation=http://www.terracotta.org/documentation/ga/product-documentation
 3.2.ToolsOverview=http://www.terracotta.org/documentation/ga/product-documentation
-3.2.GettingStarted=http://www.terracotta.org
+3.2.GettingStarted=http://www.terracotta.org/whats-new-2010-01-release
 3.2.ReleaseNotes=http://www.terracotta.org/confluence/display/docs/Release+Notes
 3.2.Register=http://www.terracotta.org/account/
 3.2.Documentation=http://www.terracotta.org/documentation/
