fixed bootjar creation failure when moving modules to platform

--- a/dso/branches/3.2/code/base/common/src.resources/com/tc/properties/tc.properties
+++ b/dso/branches/3.2/code/base/common/src.resources/com/tc/properties/tc.properties
@@ -291,7 +291,7 @@ l1.jvm.check.compatibility = true
 # Description       : This section contains the defaults for the L1 integration modules
 # repositories      : Comma-separated list of additional module repositories URL's;
 #                     if the tc.install-root system property is set, a default repository
-#                     of (tc.install-root)/modules will be injected
+#                     of (tc.install-root)/platform/modules will be injected
 # default           : Comma-separated list of integration modules that are implicitly
 #                     loaded by the L1 in the form specified by the Required-Bundles
 #                     OSGI manifest header
