convert sessions demo to express

--- a/dso/branches/3.2/code/base/buildconfig/distribution/dso-enterprise.def.yml
+++ b/dso/branches/3.2/code/base/buildconfig/distribution/dso-enterprise.def.yml
@@ -16,9 +16,8 @@ bundled_demos:
       install_directory: sessions/samples
       manifest:
         - cart
-        # commented out until these two samples converted to express
-        #- tasklist
-        #- townsend
+        - tasklist
+        - townsend
 bundled_vendors:
    - jetty-6.1.15:
        install_directory: vendors/jetty-6.1.15
