DEV-3698, DEV-3699 : client switchover on handshake timeout and propertis

--- a/dso/trunk/code/base/common/src.resources/com/tc/properties/tc.properties
+++ b/dso/trunk/code/base/common/src.resources/com/tc/properties/tc.properties
@@ -403,6 +403,9 @@ l1.connect.versionMatchCheck.enabled = true
 l1.socket.connect.timeout=10000
 l1.socket.reconnect.waitInterval=1000
 
+tc.transport.handshake.timeout=10000
+tc.config.getFromSource.timeout=30000
+
 ###########################################################################################
 # Section           : L1 Reconnect Properties
 # Description       : This section contains properties controlling L1 reconnect feature
