--- a/dso/branches/fullDuplexNIO/code/base/buildconfig/distribution/dso-opensource.def.yml
+++ b/dso/branches/fullDuplexNIO/code/base/buildconfig/distribution/dso-opensource.def.yml
@@ -17,7 +17,7 @@ bundled_demos:
       manifest:
         - cart
         - tasklist
-        #- townsend
+        - townsend
 bundled_vendors:
    - jetty-6.1.15:
        install_directory: vendors/jetty-6.1.15
