--- a/reflector/reflector.properties
+++ b/reflector/reflector.properties
@@ -11,6 +11,7 @@ quartz.update.properties=http://svn.terracotta.org/svn/tc/update-checker/quartz-
 ### End default
 
 ### 3.2.1 Beta Build Info
+3.2.1.GettingStarted=http://www.terracotta.org/confluence/display/docs/Release+Notes+3.2.1+Beta
 3.2.1.ReleaseNotes=http://www.terracotta.org/confluence/display/docs/Release+Notes+3.2.1+Beta
 3.2.1.Documentation=http://www.terracotta.org/documentation/betadocs/
 3.2.1.Examinator=http://www.terracotta.org/documentation/examinator/
