--- a/dso/branches/3.2/code/base/buildconfig/distribution/dso-opensource.def.yml
+++ b/dso/branches/3.2/code/base/buildconfig/distribution/dso-opensource.def.yml
@@ -18,6 +18,10 @@ bundled_demos:
         - cart
         - tasklist
         - townsend
+  - ehcache:
+      install_directory: ehcache/samples
+      manifest:
+        - service
 bundled_vendors:
    - jetty-6.1.15:
        install_directory: vendors/jetty-6.1.15
@@ -149,19 +153,9 @@ postscripts:
         - ehcache-terracotta
         - quartz-terracotta
         - terracotta-session
-        
-  - inject-forge-tims:
-      args:
-        - tims: 
-            - tim-apache-struts-1.1
-            - tim-jetty-6.1
-        - dest: 
-            - tools/sessions/configurator-sandbox
-
   - include-external-resources:
       args:
         - buildconfig/distribution/external-resources.yml
-        
   - delete-tim-get-index
   - include-schemas:
       args:
@@ -231,6 +225,4 @@ postscripts:
           version: api.version
           inject: 
             - lib/resources/build-data.txt
-          
   - delete-api-jars
-          
