DEV-3775: Move tc-config-reference.xml to platform/docs in kit.

--- a/dso/trunk/code/base/buildconfig/distribution/dso-enterprise.def.yml
+++ b/dso/trunk/code/base/buildconfig/distribution/dso-enterprise.def.yml
@@ -39,7 +39,7 @@ bundled_components:
           - TerracottaQuickStart
   - shared-base:
       documentations:
-        install_directory: docs
+        install_directory: platform/docs
         references:
           - tc-config-reference
   - common:
