--- a/dso/branches/3.2/code/base/buildconfig/distribution/dso-opensource.def.yml
+++ b/dso/branches/3.2/code/base/buildconfig/distribution/dso-opensource.def.yml
@@ -39,7 +39,7 @@ bundled_components:
           - TerracottaQuickStart
   - shared-base:
       documentations:
-        install_directory: docs
+        install_directory: platform/docs
         references:
           - tc-config-reference
   - common:
