adding info for quartz and ehcache quick starts

--- a/reflector/reflector.properties
+++ b/reflector/reflector.properties
@@ -16,6 +16,8 @@ quartz.update.properties=http://svn.terracotta.org/svn/tc/update-checker/quartz-
 3.2.1.Documentation=http://www.terracotta.org/documentation/betadocs/
 3.2.1.Examinator=http://www.terracotta.org/documentation/examinator/
 3.2.1.HA=http://www.terracotta.org/documentation/ga/product-documentation
+3.2.1.EhcacheQuickStart=http://www.ehcache.org
+3.2.1.QuartzQuickStart=http://www.quartz-scheduler.org/
 
 ### Start 3.2 --Note: KitID 3.2 is referenced in trunk, it will point to the current docs
 3.2.AboutConfigurationFiles=http://www.terracotta.org/documentation/ga/product-documentation
