Added tc-config-server-reference.xml to docs directory of kit.

--- a/dso/branches/3.2/code/base/buildconfig/distribution/dso-enterprise.def.yml
+++ b/dso/branches/3.2/code/base/buildconfig/distribution/dso-enterprise.def.yml
@@ -37,6 +37,11 @@ bundled_components:
           - INSTALL
         guides:
           - TerracottaQuickStart
+  - express-base:
+      documentations:
+        install_directory: docs
+        references:
+          - tc-config-server-reference
   - shared-base:
       documentations:
         install_directory: platform/docs
