--- a/reflector/reflector.properties
+++ b/reflector/reflector.properties
@@ -18,6 +18,7 @@ quartz.update.properties=http://svn.terracotta.org/svn/tc/update-checker/quartz-
 3.2.1.HA=http://www.terracotta.org/documentation/ga/product-documentation
 3.2.1.EhcacheQuickStart=http://www.ehcache.org
 3.2.1.QuartzQuickStart=http://www.quartz-scheduler.org/
+3.2.1.TerracottaQuickStart=http://www.terracotta.org/confluence/display/docs/Release+Notes+3.2.1+Beta
 
 ### Start 3.2 --Note: KitID 3.2 is referenced in trunk, it will point to the current docs
 3.2.AboutConfigurationFiles=http://www.terracotta.org/documentation/ga/product-documentation
